<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">AndroidDevFinal_ConaxApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="home">Home</string>
    <string name="locations">Locations</string>
    <string name="games">Games</string>
    <string name="jobs">Jobs</string>
    <string name="settings">Settings</string>
    <string name="credits">Credits</string>

    <string name="locationButton">View Location On Maps</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="company_name">Conax Inc</string>
    <string name="about">About Conax</string>
    <string name="about_text">Conax is a video game development company founded by Connor Cozad and Max Lombardi. Conax has been in the game development business for about 10 years now and has made some of the most renowned titles in gaming history such as Universe Wars, The Land of Asuke, The legend of the wise one and pirates of cuba. Conax is a amazing company with some amazing exprince under there belts if you would like to join there team check out the job section otherwise please checkout our locations page and games page. You my also subscribe to our mailing list to get all the gaming news</string>

    <string name="font_size">Change Font Size For Small Text</string>
    <string name="colour_picker">Colour Picker</string>
    <string name="account">Account</string>

    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="user">User</string>
    <string name="email">Email</string>
    <string name="enterImageName">Enter Image name</string>
    <string name="subscribeToOurMailingList">Subscribe to our mailing list</string>

    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>

    <string name="creditsText">
            <b>Game Pictures</b> \n\n
        *Wise one picture "pendleburyannette From PixaBay" \n
        *Pirates of cuba picture "Zoltan Tasi from Unsplash" \n
        *Universe Wars picture "Guillermo Ferla From Unsplash" \n
        *the Land of asuke picture "Bryson Hammer From Unsplash" \n\n\n

            <b>Office Pictures</b> \n\n
        *London Office picture "Remedios Remón on Unsplash" \n
        *Los Angles office picture "Eric Sharp on Unsplash" \n
        *Montreal office picture "Oakville News on Unsplash" \n
        *Tokyo office Picture "Erik Mclean on Unsplash"
        *Conax office inside "Alex Kotliarskyi on Unsplash"
    </string>


</resources>