<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home" />
        <item
            android:id="@+id/locationsFragment"
            android:icon="@drawable/ic_baseline_map_24"
            android:title="@string/locations" />
        <item
            android:id="@+id/gamesFragment"
            android:icon="@drawable/ic_baseline_videogame_asset_24"
            android:title="@string/games" />

        <item
            android:id="@+id/jobsFragment"
            android:icon="@drawable/ic_baseline_business_center_24"
            android:title="@string/jobs" />

        <item
            android:id="@+id/settingsFragment"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings" />


    </group>
</menu>