<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.settingsFragment"
    android:orientation="vertical">


    <TextView
        android:id="@+id/Settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="0"
        android:text="@string/settings"
        android:textAlignment="center"
        android:textSize="@dimen/Title_size" />

    <TextView
        android:id="@+id/Font_Size_Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="0"
        android:text="@string/font_size"
        android:textAlignment="center"
        android:textSize="@dimen/text_size" />

    <SeekBar
        android:id="@+id/fontSizeBar"
        style="@android:style/Widget.Material.SeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="0"
        android:max="50"
        android:progress="25"
        android:progressBackgroundTint="@color/red" />

    <TextView
        android:id="@+id/Colour_Picker_Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="0"
        android:text="@string/colour_picker"
        android:textAlignment="center"
        android:textSize="@dimen/header_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="87dp"
        android:layout_margin="10dp"
        android:layout_weight="0"
        android:orientation="horizontal">

        <Button
            android:id="@+id/RedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:text="@string/red"
            android:textColor="@color/red"
            android:textSize="@dimen/text_size" />

        <Button
            android:id="@+id/BlueButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:text="@string/blue"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_size" />

        <Button
            android:id="@+id/YellowButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:text="@string/yellow"
            android:textColor="@color/yellow"
            android:textSize="@dimen/text_size" />

        <Button
            android:id="@+id/GreenButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:text="@string/green"
            android:textColor="@color/green"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

    <TextView
        android:id="@+id/accountText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="0"
        android:text="@string/account"
        android:textAlignment="center"
        android:textSize="@dimen/header_size" />

    <EditText
        android:id="@+id/enterUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="0"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/user_name" />

    <EditText
        android:id="@+id/usersEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="0"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/email" />

    <ImageView
        android:id="@+id/userImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="0"
        tools:src="@tools:sample/avatars" />

    <CheckBox
        android:id="@+id/checkBoxForMailingList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="0"
        android:text="@string/subscribeToOurMailingList" />

</LinearLayout>