<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.homeFragment"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/CompanyName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:fontFamily="serif"
                android:text="@string/company_name"
                android:textAlignment="center"
                android:textSize="@dimen/Title_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:fontFamily="serif"
                android:text="@string/about"
                android:textAlignment="center"
                android:textSize="@dimen/header_size" />

            <TextView
                android:id="@+id/aboutText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:fontFamily="serif"
                android:text="@string/about_text"
                android:textSize="@dimen/text_size" />

            <ImageView
                android:id="@+id/homeImage"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                tools:src="@drawable/conax_office" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>